--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -126,6 +126,7 @@ ul {
         }
       }
       span.user-img {
+        margin-top: 22px;
         display: inline-block;
         position: relative;
         img {
