--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -1214,7 +1214,7 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url(../images/main.jpg);
+  // background: url(../images/main.jpg);
   height: 60vh;
   background-size: cover;
   // Media Query
