--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -1422,11 +1422,30 @@ ul {
     touch-action: pan-y;
   }
   .doctor-slider {
-    .slick-slide {
-      display: block;
-      margin-left: 0;
-      padding: 10px;
-      width: 280px;
+    .carousel-styling {
+      .rec.rec-arrow {
+        background-color: #10defd;
+        color: white;
+      }
+      .rec.rec-arrow:disabled {
+        background-color: #10defd80;
+      }
+      .rec.rec-dot {
+        height: 10px;
+        width: 10px;
+
+        border-radius: 50%;
+      }
+      .rec.rec-dot_active {
+        background-color: #10defd;
+        border-color: #10defd;
+        box-shadow: 0 0 1px 3px #78eeff;
+      }
+      .rec.rec-dot:hover,
+      .rec.rec-dot:focus {
+        cursor: pointer;
+        box-shadow: 0 0 1px 3px #78eeff;
+      }
     }
     .profile-widget {
       width: 100%;
@@ -1546,6 +1565,31 @@ ul {
     padding: 16px 50px;
   }
   .features-slider {
+    .carousel-styling {
+      .rec.rec-arrow {
+        background-color: #10defd;
+        color: white;
+      }
+      .rec.rec-arrow:disabled {
+        background-color: #10defd80;
+      }
+      .rec.rec-dot {
+        height: 10px;
+        width: 10px;
+
+        border-radius: 50%;
+      }
+      .rec.rec-dot_active {
+        background-color: #10defd;
+        border-color: #10defd;
+        box-shadow: 0 0 1px 3px #78eeff;
+      }
+      .rec.rec-dot:hover,
+      .rec.rec-dot:focus {
+        cursor: pointer;
+        box-shadow: 0 0 1px 3px #78eeff;
+      }
+    }
     .feature-item {
       width: 100%;
       display: inline-block;
@@ -1632,6 +1676,33 @@ ul {
 .our-doctors-section {
   padding: 60px 0;
   background: #fff;
+  .our-doctors {
+    .carousel-styling {
+      .rec.rec-arrow {
+        background-color: #10defd;
+        color: white;
+      }
+      .rec.rec-arrow:disabled {
+        background-color: #10defd80;
+      }
+      .rec.rec-dot {
+        height: 10px;
+        width: 10px;
+
+        border-radius: 50%;
+      }
+      .rec.rec-dot_active {
+        background-color: #10defd;
+        border-color: #10defd;
+        box-shadow: 0 0 1px 3px #78eeff;
+      }
+      .rec.rec-dot:hover,
+      .rec.rec-dot:focus {
+        cursor: pointer;
+        box-shadow: 0 0 1px 3px #78eeff;
+      }
+    }
+  }
   .section-heading {
     margin-bottom: 30px;
     h2 {
@@ -1758,6 +1829,11 @@ ul {
           text-align: center;
           display: block;
           font-weight: 500;
+          &:hover {
+            background: #0de0fe;
+            border: 1px solid #0de0fe;
+            color: #ffffffe6;
+          }
         }
         .book-btn {
           color: #fff;
