--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -1024,44 +1024,13 @@ ul {
 .schedule-cont {
   padding: 20px;
   .time-slot {
-    ul {
-      list-style: none;
-      margin-right: -5px;
-      margin-left: -5px;
-      margin-bottom: 0;
-      padding: 0;
-    }
-    li {
-      float: left;
-      padding-left: 5px;
-      padding-right: 5px;
-      width: 14.28%;
-      min-height: 1px;
-      .timing {
-        background-color: #e9e9e9;
-        border: 1px solid #e9e9e9;
-        border-radius: 3px;
-        color: #757575;
-        display: block;
-        font-size: 14px;
-        margin-bottom: 10px;
-        padding: 5px;
-        text-align: center;
-        position: relative;
-      }
-      .timing.selected {
-        background-color: #42c0fb;
-        border: 1px solid #42c0fb;
-        color: #fff;
-        &::before {
-          color: #fff;
-          content: "\f00c";
-          font-family: "font awesome 5 free";
-          font-size: 12px;
-          font-weight: 900;
-          position: absolute;
-          right: 6px;
-          top: 6px;
+    .schd-item {
+      button {
+        width: 202px;
+        &:hover,
+        &:focus {
+          background-color: #096bdc;
+          border-color: #096bdc;
         }
       }
     }
