--- a/public/user_assets/css/main.css
+++ b/public/user_assets/css/main.css
@@ -37,8 +37,8 @@ ul {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin: 0;
 }
 
@@ -51,8 +51,8 @@ ul {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
 }
 
 .topbar i.topbar_lft_icn {
@@ -111,7 +111,7 @@ ul {
   text-transform: uppercase;
   background: #10defd;
   -webkit-box-shadow: 0 4px 4px #bdbdbd40;
-          box-shadow: 0 4px 4px #bdbdbd40;
+  box-shadow: 0 4px 4px #bdbdbd40;
   border-radius: 47px;
   border: 0;
 }
@@ -122,8 +122,8 @@ ul {
 
 .header li.logged-item a.nav-link {
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -142,9 +142,9 @@ ul {
   display: inline-block;
   pointer-events: none;
   -webkit-transform-origin: 66% 66%;
-          transform-origin: 66% 66%;
+  transform-origin: 66% 66%;
   -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
+  transform: rotate(45deg);
   -webkit-transition: all 0.15s ease-in-out;
   transition: all 0.15s ease-in-out;
   width: 8px;
@@ -160,7 +160,7 @@ ul {
 .header li.logged-item a.nav-link span.user-img img {
   height: 31px;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   width: 31px;
 }
 
@@ -176,7 +176,61 @@ ul {
   -webkit-transform: rotate(135deg);
   transform: rotate(135deg);
   -webkit-box-shadow: -2px 2px 2px -1px #0000001a;
-          box-shadow: -2px 2px 2px -1px #0000001a;
+  box-shadow: -2px 2px 2px -1px #0000001a;
+}
+
+/* Width 412px */
+
+@media screen and (width: 412px) {
+  .header li.logged-item .dropdown-menu::before {
+    top: 111px;
+    right: 304px !important;
+  }
+}
+
+/* Width 360px */
+
+@media screen and (width: 360px) {
+  .header li.logged-item .dropdown-menu::before {
+    top: 111px;
+    right: 255px;
+  }
+}
+
+/* Width 740px */
+
+@media screen and (width: 740px) {
+  .header li.logged-item .dropdown-menu::before {
+    top: 111px;
+    right: 631px !important;
+  }
+}
+
+/* Width 768px */
+
+@media screen and (width: 768px) {
+  .header li.logged-item .dropdown-menu::before {
+    top: 111px;
+    right: 645px !important;
+  }
+}
+
+/* Width 820px */
+
+@media screen and (width: 820px) {
+  .header li.logged-item .dropdown-menu::before {
+    top: 111px;
+    right: 700px !important;
+  }
+}
+
+/* Width 915px */
+
+@media screen and (width: 915px) {
+  .header li.logged-item .dropdown-menu::before {
+    top: 111px;
+    right: 795px !important;
+  }
 }
 
 .header li.logged-item .dropdown-menu .user-header {
@@ -190,7 +244,7 @@ ul {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .header li.logged-item .dropdown-menu .user-header .user-text {
@@ -221,8 +275,8 @@ ul {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin: 0;
 }
 
