--- a/public/user_assets/css/style.css
+++ b/public/user_assets/css/style.css
@@ -793,6 +793,7 @@ button.bg-danger:hover {
   box-shadow: inherit;
   font-size: 14px;
   transform-origin: left top 0;
+  z-index: 9999;
 }
 .dropdown-item.active,
 .dropdown-item:active {
