--- a/public/user_assets/css/style.css
+++ b/public/user_assets/css/style.css
@@ -3834,7 +3834,7 @@ html.menu-opened body {
 }
 .feature-item img {
   border-radius: 100%;
-  box-shadow: 1px 6px 14px rgba(0, 0, 0, 0.2);
+
   height: 115px;
   object-fit: cover;
   width: 115px;
@@ -12514,4 +12514,13 @@ ul.benifits-col li i {
   to {
     transform: scale(1.1);
   }
+}
+
+.section-about-filter {
+  /* background: radial-gradient(white, #0000000d); */
+  background: #d9d9d9;
+}
+
+.search-area {
+  border-radius: 0;
 }
