Hoe Page Update

--- a/public/user_assets/css/style.css
+++ b/public/user_assets/css/style.css
@@ -12518,7 +12518,7 @@ ul.benifits-col li i {
 
 .section-about-filter {
   /* background: radial-gradient(white, #0000000d); */
-  background: #d9d9d9;
+  background: #f0f0f5;
 }
 
 .search-area {
