navbar about Update

--- a/public/user_assets/css/style.css
+++ b/public/user_assets/css/style.css
@@ -12524,3 +12524,11 @@ ul.benifits-col li i {
 .search-area {
   border-radius: 0;
 }
+
+.bg-custom-login {
+  background-color: #0de0fe;
+}
+
+.bg-custom-login:hover {
+  background-color: #00cc52;
+}
