--- a/public/user_assets/css/main.css
+++ b/public/user_assets/css/main.css
@@ -268,7 +268,7 @@ ul {
 }
 
 .page_content {
-  background-color: #15558d;
+  background-color: #005199cf;
   padding: 1rem 0;
   height: 100px;
 }
