--- a/public/user_assets/css/style.css
+++ b/public/user_assets/css/style.css
@@ -12532,3 +12532,8 @@ ul.benifits-col li i {
 .bg-custom-login:hover {
   background-color: #00cc52;
 }
+
+/* Header Custom */
+.main-header {
+  box-shadow: 0px 15px 10px -10px #000000a8;
+}
