--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -139,4 +139,13 @@ ul {
     margin: 50px 0;
   }
 }
+
+/* Custom Stylesheet */
+.admn_btn a {
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 20px;
+}
 /*# sourceMappingURL=admin.css.map */
