--- a/public/assets/css/style3.css
+++ b/public/assets/css/style3.css
@@ -6,18 +6,26 @@
 } */
 
 .form-box {
-  height: 78vh;
+  height: 80vh;
   top: 11vh;
   background: linear-gradient(90deg, #fff 50%, #0dcaf0 50%);
   box-shadow: 0px 5px 34px 5px #022e236b;
   position: relative;
 }
 
+@media screen and (min-width: 300px) and (max-width: 1200px) {
+  .form-box {
+    height: fit-content;
+    top: 5vh;
+    bottom: 5vh;
+  }
+}
+
 .bg-background {
   background: url(/assets/images/signup-background.png);
   background-size: cover;
   background-repeat: no-repeat;
-  height: 731px;
+  height: 775px;
   overflow: hidden;
   background-position: center;
 }
