--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -13,7 +13,7 @@
   position: relative;
 }
 
-@media screen and (min-width: 300px) and (max-width: 1200px) {
+@media screen and (min-width: 300px) and (max-width: 900px) {
   .form-box {
     height: fit-content;
     top: 5vh;
@@ -25,9 +25,44 @@
   /* background: url(/assets/images/background-right.png); */
   background-size: cover;
   background-repeat: no-repeat;
-  height: 756px;
+  height: 775px;
   overflow: hidden;
   background-position: center;
+}
+
+@media screen and (min-width: 300px) and (max-width: 900px) {
+  .bg-background1 {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 900px) and (max-width: 1200px) {
+  .bg-background1 {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 900px) and (max-width: 1368px) {
+  .form-box {
+    height: fit-content;
+    top: 5vh;
+    bottom: 5vh;
+  }
+}
+
+@media screen and (width: 1368px) {
+  .bg-background1 {
+    height: 820px;
+  }
+}
+
+@media screen and (min-width: 300px) and (max-width: 600px) {
+  .login-btn-option {
+    flex-direction: column;
+  }
+  .login-btn-option button {
+    margin-bottom: 10px;
+  }
 }
 
 button.btn-custom-login {
